# advent

./: README.md  Scratchpad.ipynb  pyproject.toml
01/: Sonar Sweep.ipynb
02/: Dive!.ipynb
2021/03/: Binary Diagnostic.ipynb
2021/04/: Giant Squid.ipynb
2021/05/: Hydrothermal Venture.ipynb
2021/06/: Lanternfish.ipynb
2021/07/: The Treachery of Whales.ipynb
2022/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb
2023/: 01.ipynb
2024/: 01.ipynb  02.ipynb  utilities.py
