[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
advent-of-code-data = "^1.1.1"
pyparsing = "^3.0.9"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
